tests/ui-tests/tests/cases/inputobject-guess-validation.stderr
error: Could not find a field fieid in the GraphQL InputObject IssueOrder. Did you mean field?
  --> $DIR/inputobject-guess-validation.rs:65:13
   |
65 |         pub fieid: IssueOrderField,
   |             ^^^^^

error: This InputObject is missing these required fields: field
  --> $DIR/inputobject-guess-validation.rs:62:5
   |
62 |     #[cynic(graphql_type = "IssueOrder")]
   |     ^

error[E0277]: the trait bound `queries::IssueOrder: InputObject<Option<query_dsl::IssueOrder>>` is not satisfied
  --> $DIR/inputobject-guess-validation.rs:30:32
   |
30 |         #[arguments(order_by = &args.pr_order)]
   |                                ^^^^^^^^^^^^^^ the trait `InputObject<Option<query_dsl::IssueOrder>>` is not implemented for `queries::IssueOrder`
   |
   = note: required because of the requirements on the impl of `InputObject<Option<query_dsl::IssueOrder>>` for `&queries::IssueOrder`
   = note: required because of the requirements on the impl of `InputObjectArgument<Option<query_dsl::IssueOrder>>` for `&queries::IssueOrder`
